--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2021-08-17 Tue 12:52 -->
+<!-- 2021-08-18 Wed 12:40 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Surya's website</title>
@@ -630,7 +630,7 @@ document.location.href = orgsource;
 <h2 id="about-me"><span class="section-number-2">1.</span> About-me</h2>
 <div class="outline-text-2" id="text-about-me">
 <p>
-Hi! I&rsquo;m Surya. A teenager interested in all most things tech! My current
+Hi! I&rsquo;m Surya. A teenager interested in <del>all</del> most things tech! My current
 interests are:
 </p>
 
@@ -671,7 +671,7 @@ From the demos and previews on the copilot website, the description
 
 
 
-<div id="org77983c9" class="figure">
+<div id="org8b5f3f3" class="figure">
 <p><img src="data/copilotgif.gif" alt="copilotgif.gif" width="100%" height="100%" />
 </p>
 <p><span class="figure-number">Figure 1: </span>Source: GitHub</p>
@@ -691,7 +691,7 @@ function name provided to it by the IDE.
 </p>
 
 
-<div id="org91cff4b" class="figure">
+<div id="org6761efb" class="figure">
 <p><img src="data/copilot.png" alt="copilot.png" width="100%" height="100%" />
 </p>
 <p><span class="figure-number">Figure 2: </span>How GitHub Copilot works (Source: GitHub)</p>
@@ -798,7 +798,7 @@ of a file, as if to break the ice.
 </div>
 
 
-<div id="orgb4e5892" class="figure">
+<div id="org14a0660" class="figure">
 <p><img src="data/graph.png" alt="graph.png" width="100%" height="100%" />
 </p>
 <p><span class="figure-number">Figure 3: </span>Copilot suggestions grouped based on overlap with test data (Source: GitHub)</p>
@@ -969,7 +969,7 @@ a chance to analyze what kind of code is accepted more often.
 <h4 id="copilot-might-not-be-useful"><span class="section-number-4">2.5.3.</span> Copilot might not be <i>useful</i>?</h4>
 <div class="outline-text-4" id="text-copilot-might-not-be-useful">
 
-<div id="orgfa2c4ae" class="figure">
+<div id="orga3fd585" class="figure">
 <p><img src="data/IntelliCodeUsageExamples.gif" alt="IntelliCodeUsageExamples.gif" width="100%" height="100%" />
 </p>
 <p><span class="figure-number">Figure 4: </span>Source: [fast.ai](<a href="https://www.fast.ai">https://www.fast.ai</a>)</p>
@@ -1050,7 +1050,7 @@ stolen)</a><br /></li>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Surya Pranav</p>
-<p class="date">Created: 2021-08-17 Tue 12:52</p>
+<p class="date">Created: 2021-08-18 Wed 12:40</p>
 </div>
 </body>
 </html>
