--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2021-09-23 Thu 10:55 -->
+<!-- 2021-09-23 Thu 22:05 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Surya's website</title>
@@ -490,7 +490,7 @@ color:  #ccc;
 }
 
 /* table of content */
-#table-of-contents {
+table-of-contents {
 position:  fixed;
 right:  0em;
 top:  0em;
@@ -506,7 +506,7 @@ overflow:  auto;
 z-index:  200;
 }
 
-#table-of-contents h2 {
+table-of-contents h4 {
 max-width:  20em;
 font-weight:  normal;
 padding-left:  0.5em;
@@ -591,7 +591,12 @@ function show_org_source(){
 document.location.href = orgsource;
 }
 </script>
+<style> h1 {font-size: 36px;} </style>
+<style> h2 {font-size: 31.5px} </style>
+<style> h3 {font-size: 27px} </style>
+<style> h4 {font-size: 22.5px} </style>
 <style>a {color: #EBCB8B;} </style>
+<style>table-of-contents {font-size: 18px} </style>
 </head>
 <body>
 <div id="content" class="content">
@@ -601,24 +606,24 @@ document.location.href = orgsource;
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
 <li><a href="#about-me">1. About-me</a></li>
-<li><a href="#org6db703d">2. Humor</a></li>
-<li><a href="#org424a589">3. Marijuana Legalization in the Indian Context</a>
+<li><a href="#org503ef37">2. Humor</a></li>
+<li><a href="#org7bbb587">3. Marijuana Legalization in the Indian Context</a>
 <ul>
-<li><a href="#orgbf25d20">3.1. The History of Marijuana Usage in India and its uses</a></li>
-<li><a href="#org8b7d769">3.2. Why we should Legalize Cannabis:</a>
+<li><a href="#orgc655712">3.1. The History of Marijuana Usage in India and its uses</a></li>
+<li><a href="#org8cb5975">3.2. Why we should Legalize Cannabis:</a>
 <ul>
-<li><a href="#org76a83c0">3.2.1. Cannabis is less dangerous than already-legal drugs</a></li>
-<li><a href="#org7203610">3.2.2. Bans are expensive (and legalization is profitable)</a></li>
-<li><a href="#org0c09c15">3.2.3. Marijuana as a medical herb</a></li>
-<li><a href="#org059466e">3.2.4. Marijuana is a gateway drug</a></li>
-<li><a href="#org3efa2d9">3.2.5. Conclusion</a></li>
+<li><a href="#orgf8ed4e7">3.2.1. Cannabis is less dangerous than already-legal drugs</a></li>
+<li><a href="#org302ad38">3.2.2. Bans are expensive (and legalization is profitable)</a></li>
+<li><a href="#org640083b">3.2.3. Marijuana as a medical herb</a></li>
+<li><a href="#org0f02f61">3.2.4. Marijuana is a gateway drug</a></li>
+<li><a href="#org5561104">3.2.5. Conclusion</a></li>
 </ul>
 </li>
 </ul>
 </li>
-<li><a href="#orge28e0be">4. <i>GitHub</i> Copilot</a>
+<li><a href="#org3c2d265">4. <i>GitHub</i> Copilot</a>
 <ul>
-<li><a href="#org48f4dfd">4.1. What <i>Copilot</i> is</a></li>
+<li><a href="#orgc6dd0db">4.1. What <i>Copilot</i> is</a></li>
 <li><a href="#how-does-it-work">4.2. How does it work?</a></li>
 <li><a href="#is-this-legal">4.3. Is this <i>legal</i>?</a>
 <ul>
@@ -665,26 +670,26 @@ programming</a><br /></li>
 </div>
 </div>
 
-<div id="outline-container-org6db703d" class="outline-2">
-<h2 id="org6db703d"><span class="section-number-2">2.</span> <a href="humor.html">Humor</a></h2>
+<div id="outline-container-org503ef37" class="outline-2">
+<h2 id="org503ef37"><span class="section-number-2">2.</span> <a href="humor.html">Humor</a></h2>
 </div>
 
-<div id="outline-container-org424a589" class="outline-2">
-<h2 id="org424a589"><span class="section-number-2">3.</span> Marijuana Legalization in the Indian Context</h2>
+<div id="outline-container-org7bbb587" class="outline-2">
+<h2 id="org7bbb587"><span class="section-number-2">3.</span> Marijuana Legalization in the Indian Context</h2>
 <div class="outline-text-2" id="text-3">
 
-<div id="orge0778d2" class="figure">
+<div id="org7fa44a9" class="figure">
 <p><img src="https://static01.nyt.com/images/2021/04/20/multimedia/20onpolitics-02/20onpolitics-02-jumbo.jpg?quality=90&amp;auto=webp" alt="20onpolitics-02-jumbo.jpg?quality=90&amp;auto=webp" width="100%" height="100%" />
 </p>
 <p><span class="figure-number">Figure 1: </span>Source: The New York Times</p>
 </div>
 </div>
 
-<div id="outline-container-orgbf25d20" class="outline-3">
-<h3 id="orgbf25d20"><span class="section-number-3">3.1.</span> The History of Marijuana Usage in India and its uses</h3>
+<div id="outline-container-orgc655712" class="outline-3">
+<h3 id="orgc655712"><span class="section-number-3">3.1.</span> The History of Marijuana Usage in India and its uses</h3>
 <div class="outline-text-3" id="text-3-1">
 
-<div id="orgd9ea496" class="figure">
+<div id="orgdc19eca" class="figure">
 <p><img src="https://cdn.exoticindia.com/images/products/original/hindu/hb53.jpg" alt="hb53.jpg" width="100%" height="100%" />
 </p>
 <p><span class="figure-number">Figure 2: </span>Parvati offering Shiva <i>Bhang</i>, a beverage made using cannabis</p>
@@ -707,12 +712,12 @@ possibly even semiconductors</span>!<sup><a id="fnr.2" class="footref" href="#fn
 </div>
 </div>
 
-<div id="outline-container-org8b7d769" class="outline-3">
-<h3 id="org8b7d769"><span class="section-number-3">3.2.</span> Why we should Legalize Cannabis:</h3>
+<div id="outline-container-org8cb5975" class="outline-3">
+<h3 id="org8cb5975"><span class="section-number-3">3.2.</span> Why we should Legalize Cannabis:</h3>
 <div class="outline-text-3" id="text-3-2">
 </div>
-<div id="outline-container-org76a83c0" class="outline-4">
-<h4 id="org76a83c0"><span class="section-number-4">3.2.1.</span> Cannabis is less dangerous than already-legal drugs</h4>
+<div id="outline-container-orgf8ed4e7" class="outline-4">
+<h4 id="orgf8ed4e7"><span class="section-number-4">3.2.1.</span> Cannabis is less dangerous than already-legal drugs</h4>
 <div class="outline-text-4" id="text-3-2-1">
 <p>
 The fundamental argument for the full legalization of the crop is simply that it makes no
@@ -737,11 +742,11 @@ John S. Mill, <i>On Liberty</i>
 </div>
 </div>
 
-<div id="outline-container-org7203610" class="outline-4">
-<h4 id="org7203610"><span class="section-number-4">3.2.2.</span> Bans are expensive (and legalization is profitable)</h4>
+<div id="outline-container-org302ad38" class="outline-4">
+<h4 id="org302ad38"><span class="section-number-4">3.2.2.</span> Bans are expensive (and legalization is profitable)</h4>
 <div class="outline-text-4" id="text-3-2-2">
 
-<div id="org44ffb29" class="figure">
+<div id="orgf86ece3" class="figure">
 <p><img src="https://cdn.theatlantic.com/thumbor/P4iUHiPggG7vLRywAMcewnWiLPA=/0x331:3000x2019/1952x1098/media/img/mt/2015/06/AP321028026/original.jpg" alt="original.jpg" width="100%" height="100%" />
 </p>
 <p><span class="figure-number">Figure 3: </span>Source: The Atlantic</p>
@@ -786,11 +791,11 @@ with crime.
 </div>
 </div>
 
-<div id="outline-container-org0c09c15" class="outline-4">
-<h4 id="org0c09c15"><span class="section-number-4">3.2.3.</span> Marijuana as a medical herb</h4>
+<div id="outline-container-org640083b" class="outline-4">
+<h4 id="org640083b"><span class="section-number-4">3.2.3.</span> Marijuana as a medical herb</h4>
 <div class="outline-text-4" id="text-3-2-3">
 
-<div id="org74a5527" class="figure">
+<div id="org6d6050e" class="figure">
 <p><img src="https://domf5oio6qrcr.cloudfront.net/medialibrary/10941/iStock-1015545230.jpg" alt="iStock-1015545230.jpg" width="100%" height="100%" />
 </p>
 <p><span class="figure-number">Figure 4: </span>Source: Harvard Health</p>
@@ -808,7 +813,7 @@ lacks medical merit. This makes an interesting case, and highlights the duality 
 </div>
 
 <ol class="org-ol">
-<li><a id="orgbd0d524"></a>Marijuana as tobacco<br />
+<li><a id="org3562ac1"></a>Marijuana as tobacco<br />
 <div class="outline-text-5" id="text-3-2-3-1">
 <p>
 One side of the leaf on making the case for (or against) marijuana is its recreational uses.
@@ -825,7 +830,7 @@ the worst possible scenario.
 </div>
 </li>
 
-<li><a id="orgea3b2f4"></a>Marijuana as opium<br />
+<li><a id="org112d984"></a>Marijuana as opium<br />
 <div class="outline-text-5" id="text-3-2-3-2">
 <p>
 The other side of the leaf is that cannabis and cannabanoids possess medical properties. This aspect
@@ -846,8 +851,8 @@ legalization.
 </ol>
 </div>
 
-<div id="outline-container-org059466e" class="outline-4">
-<h4 id="org059466e"><span class="section-number-4">3.2.4.</span> Marijuana is a gateway drug</h4>
+<div id="outline-container-org0f02f61" class="outline-4">
+<h4 id="org0f02f61"><span class="section-number-4">3.2.4.</span> Marijuana is a gateway drug</h4>
 <div class="outline-text-4" id="text-3-2-4">
 <p>
 Another often-used phrase in the marijuana debate is <i>&ldquo;gateway drug&rdquo;</i>. The argument is that marijuana usage
@@ -868,8 +873,8 @@ those who enter it and restrict entry.
 </div>
 </div>
 
-<div id="outline-container-org3efa2d9" class="outline-4">
-<h4 id="org3efa2d9"><span class="section-number-4">3.2.5.</span> Conclusion</h4>
+<div id="outline-container-org5561104" class="outline-4">
+<h4 id="org5561104"><span class="section-number-4">3.2.5.</span> Conclusion</h4>
 <div class="outline-text-4" id="text-3-2-5">
 <p>
 To conclude, I firmly believe that the issue with marijuana addiction can be resolved only through legalization.
@@ -883,12 +888,13 @@ purposes.
 </div>
 </div>
 </div>
-<div id="outline-container-orge28e0be" class="outline-2">
-<h2 id="orge28e0be"><span class="section-number-2">4.</span> <i>GitHub</i> Copilot</h2>
+
+<div id="outline-container-org3c2d265" class="outline-2">
+<h2 id="org3c2d265"><span class="section-number-2">4.</span> <i>GitHub</i> Copilot</h2>
 <div class="outline-text-2" id="text-4">
 </div>
-<div id="outline-container-org48f4dfd" class="outline-3">
-<h3 id="org48f4dfd"><span class="section-number-3">4.1.</span> What <i>Copilot</i> is</h3>
+<div id="outline-container-orgc6dd0db" class="outline-3">
+<h3 id="orgc6dd0db"><span class="section-number-3">4.1.</span> What <i>Copilot</i> is</h3>
 <div class="outline-text-3" id="text-4-1">
 <p>
 Microsoft-owned <i>GitHub</i> has caused quite a bit of commotion in the
@@ -904,7 +910,7 @@ From the demos and previews on the copilot website, the description
 
 
 
-<div id="org7fe29e0" class="figure">
+<div id="org318a7b6" class="figure">
 <p><img src="data/copilotgif.gif" alt="copilotgif.gif" width="100%" height="100%" />
 </p>
 <p><span class="figure-number">Figure 5: </span>Source: GitHub</p>
@@ -924,7 +930,7 @@ function name provided to it by the IDE.
 </p>
 
 
-<div id="org3764e79" class="figure">
+<div id="orgd5d3e2e" class="figure">
 <p><img src="data/copilot.png" alt="copilot.png" width="100%" height="100%" />
 </p>
 <p><span class="figure-number">Figure 6: </span>How GitHub Copilot works (Source: GitHub)</p>
@@ -1031,7 +1037,7 @@ of a file, as if to break the ice.
 </div>
 
 
-<div id="orgf6628ba" class="figure">
+<div id="org0c147b0" class="figure">
 <p><img src="data/graph.png" alt="graph.png" width="100%" height="100%" />
 </p>
 <p><span class="figure-number">Figure 7: </span>Copilot suggestions grouped based on overlap with test data (Source: GitHub)</p>
@@ -1202,7 +1208,7 @@ a chance to analyze what kind of code is accepted more often.
 <h4 id="copilot-might-not-be-useful"><span class="section-number-4">4.5.3.</span> Copilot might not be <i>useful</i>?</h4>
 <div class="outline-text-4" id="text-copilot-might-not-be-useful">
 
-<div id="orgbb0e117" class="figure">
+<div id="org041da90" class="figure">
 <p><img src="data/IntelliCodeUsageExamples.gif" alt="IntelliCodeUsageExamples.gif" width="100%" height="100%" />
 </p>
 <p><span class="figure-number">Figure 8: </span><a href="https://www.fast.ai">Source</a></p>
@@ -1312,7 +1318,7 @@ programming!
 </div></div>
 <div id="postamble" class="status">
 <p class="author">Author: Surya Pranav</p>
-<p class="date">Created: 2021-09-23 Thu 10:55</p>
+<p class="date">Created: 2021-09-23 Thu 22:05</p>
 </div>
 </body>
 </html>
