--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <meta name="referrer" content="no-referrer">
 
 <title>
-    My New Hugo Site
+    Surya&rsquo;s Website
 </title>
-<link href="/index.xml" rel="alternate" type="application/rss+xml" title="My New Hugo Site" />
+<link href="/index.xml" rel="alternate" type="application/rss+xml" title="Surya&rsquo;s Website" />
 
 
 
@@ -37,17 +37,17 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Didact+Gothic">
 
 <meta name="twitter:card" content="summary"/>
-<meta name="twitter:title" content="My New Hugo Site"/>
+<meta name="twitter:title" content="Surya&#39;s Website"/>
 <meta name="twitter:description" content=""/>
 
-<meta property="og:title" content="My New Hugo Site" />
+<meta property="og:title" content="Surya&#39;s Website" />
 <meta property="og:description" content="" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="http://example.org/" />
+<meta property="og:url" content="http://suryapranav.github.io/" />
 
 
 
-    <title>My New Hugo Site</title>
+    <title>Surya&rsquo;s Website</title>
 </head>
 
 <body>
